fixed overflow

--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ body {
 
 /* Set core body defaults */
 body {
+  overflow-x: hidden;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
